01-springboot/BondPricing/k8s/spring-aot/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    kubernetes.io/metadata.name: bondpricer-spring-aot
  name: bondpricer-spring-aot
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bondpricer-spring-aot
  name: bondpricer
  labels:
    app: bondpricer
spec:
  selector:
    matchLabels:
      app: bondpricer
  replicas: 1
  template:
    metadata:
      labels:
        app: bondpricer
    spec:
      containers:
      - name: bondpricer
        image: ghcr.io/nelvadas/bondpricing:2.0.0-spring-aot-graal23-x86_64
        command: ["/app"]
        args: ["-J-XX:+PrintFlagsFinal"]
        ports:
        - name: http 
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 3
          failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  name: bondpricer-svc
  namespace: bondpricer-spring-aot
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bondpricer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---

apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    generation: 5
    name: bondpricer-ing
    namespace: bondpricer-spring-aot
  spec:
    ingressClassName: nginx
    rules:
    - host: bondpricer.spring.aot.8d94414f.nip.io
      http:
        paths:
        - backend:
            service:
              name: bondpricer-svc
              port:
                number: 8080
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
---
